--- a/NLW/styles/partials/page-landing.css
+++ b/NLW/styles/partials/page-landing.css
@@ -1,6 +1,4 @@
-:root{
-    font-size: 40%; /* modifica as medidas padrões - rem */
-}
+
 #page-landing{
     background: var(--color-primary)
 }
@@ -73,6 +71,14 @@
 .total-connections img{
     margin-left: 1rem;
 }
+
+@media(max-width: 699px){
+    :root{
+        font-size: 40%;
+    }    
+
+}
+    
 @media(min-width: 1100px) /* caso a largura da tela >1100 pixels, aplica as seguintes configurações */{
     #page-landing #container{
         max-width: 1100px;
@@ -89,19 +95,24 @@
         grid-area: proffy;
         text-align: initial;
         align-self: center;
+        margin: 0;
     }
     .logo-container img{
         height: 100%;
+        height: 127px;
     }
     .hero-image{
         grid-area: image;
+        height: 350px;
     }
     .buttons-container{
         grid-area: button;
-        /* justify-content: flex-start; */
+        justify-content: flex-start; 
+        margin: 0;
     }
     .total-connections{
         grid-area: texting;
         justify-self: end;
+        font-size: 1.2rem;
     }
 }
