--- a/NLW/styles/partials/page-study.css
+++ b/NLW/styles/partials/page-study.css
@@ -32,11 +32,13 @@
 .page-header .header-content{
     width: 90%;
     margin: 3.2rem auto;
+    position: relative;
 }
 .page-header .header-content strong{
     font: 700 3.6rem Archivo;
     line-height: 8rem;
-    color: var(--color-title-in-primary)
+    color: var(--color-title-in-primary);
+    line-height: 40px;
 }
 #seach-teachers{
     margin-top: 3.2rem;
@@ -98,14 +100,13 @@
     bottom: 0px;
 }
 #page-study main{
-    margin: 3.2rem;
+    margin: 3.2rem auto;
     width: 90%;
-
 }
 .teacher-item{
     background-color: var(--color-box-base);
     border: 1px solid var(--color-line-in-white);
-    border-radius: .8rem;
+    border-radius: 0.8rem;
     margin-top: 2.4rem;
 }
 .teacher-item header{
@@ -133,7 +134,7 @@
     display: block;
     margin-top: .4rem;
 }
-.teacher-item p{
+.teacher-item > p{
     padding: 0 2rem;
     font-size: 1.6rem;
     line-height: 2.8rem;
@@ -186,4 +187,62 @@
 
 .teacher-item footer button:hover{
     background: var(--color-secondary-dark);
+}
+@media(min-width:700px){
+    #page-study #container{
+        max-width: 100vw;
+    }
+    .page-header{
+        height: 340px;
+    }
+     .page-header .top-bar-container{
+        max-width: 1100px;
+    } 
+    .page-header .header-content{
+        max-width: 740px;
+
+        margin: 0 auto;
+
+        flex: 1 1;
+        padding-bottom: 48px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .page-header .header-content strong{
+        max-width: 350px;
+    }
+    .teacher-item header,
+    .teacher-item footer{
+        padding: 32px;
+    }
+    #search-teachers{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 16px;
+        position: absolute;
+        bottom: -28px;
+    }
+    #page-study main{
+        padding: 32 0;
+        max-width: 740px; 
+    }
+    #search-teachers .select-block{
+        margin-bottom: 0;
+    }
+    .teacher-item > p{
+        padding: 0 32px;
+    }
+    .teacher-item footer p strong{
+        display: initial;
+        margin-left: 16px;
+    }
+    .teacher-item footer button{
+        width: 245px;
+        font-size: 16px;
+        justify-content: center;
+    } 
+    .teacher-item footer button img{
+        margin-right: 16px;
+    }
 }
